# src/Axis.Api/Endpoints/SignInUserRequest.cs
@@ -1,0 +1,5 @@
+namespace Axis.Api.Endpoints;
+
+public sealed record SignInUserRequest(
+    string Email,
+    string Password);
