# src/Modules/Identity/Axis.Identity.Application/Commands/SignInUser/SignInUserCommand.cs
@@ -1,0 +1,7 @@
+using Axis.Shared.Application.CQRS;
+
+namespace Axis.Identity.Application.Commands.SignInUser;
+
+public sealed record SignInUserCommand(
+    string Email,
+    string Password) : ICommand<SignInSuccessDto>;
